--- a/resources/sass/componentStyles/MainPage/_mainTournamentList.scss
+++ b/resources/sass/componentStyles/MainPage/_mainTournamentList.scss
@@ -86,12 +86,16 @@
                         background-color: $mainLightBrown;
                         border-radius: 15px;
                         color: $mainBlue;
-                        column-gap: 30%;
                         outline: 2px solid $mainLightBrown;
+
+                        p{
+                            width: calc((1/3)*100%);
+                        }
 
                         p:nth-child(2){
                             font-weight: 800;
                             font-size: 1.2em;
+                            text-align: center;
                         }
                     }
                     
@@ -101,6 +105,18 @@
                         justify-content: space-between;
     
                         color: $mainLightBrown;
+
+                        p{
+                            width: calc((1/3)*100%);
+                        }
+    
+                        p:nth-child(2){
+                            text-align: center;
+                        }
+                        
+                        p:nth-child(3){
+                            text-align: right;
+                        }
     
                     }
 
