--- a/resources/sass/componentStyles/Team/_teamMembers.scss
+++ b/resources/sass/componentStyles/Team/_teamMembers.scss
@@ -9,8 +9,6 @@ section#team-members{
     flex-wrap: nowrap;
     flex-direction: column;
 
-    min-height: 60vh;
-
 
 
     h3{
