--- a/resources/sass/componentStyles/User/_usersListItem.scss
+++ b/resources/sass/componentStyles/User/_usersListItem.scss
@@ -6,16 +6,21 @@
 
     a{
         width: 100%;
-        padding: 5px 20%;
-    
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
+        padding-top: 5px;
+        padding-bottom: 5px;
+        padding-left: 15%;
+        padding-right: 5%;
+        
+        
+        display: grid;
+        grid-template-columns: 0.75fr 1fr 1fr 1fr;
         
         background-color: $mainLightBrown;
         color: $mainBlue;
         border-radius: 30px;
         text-decoration: none;
+
+
     }
 
 }
